syntax = "proto3";

package userService;

import "proto/sdk/sdk.proto";

option go_package = "user-service/proto/user";

service userService {
  rpc login(MsgLogin) returns (sdk.BaseResponse);
  rpc register(MsgRegister) returns (sdk.BaseResponse);
}

message MsgLogin {
  string email = 1;
  string password = 2;
}

message MsgRegister {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 4;
}